@@ -179,8 +179,6 @@
 
       <div class="buttons">
         <input type="hidden" name="user" value="${user}" />
-        <input type="submit" name="list"
-               value="${dgettext('acct_mgr', 'Back to accounts')}" />
         <input type="submit" name="update"
                value="${dgettext('acct_mgr', 'Update')}" />
       </div>
